deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-demo
  labels:
    app: symfony-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: symfony-demo
  template:
    metadata:
      labels:
        app: symfony-demo
    spec:
      containers:
        - name: symfony-demo
          image: ghcr.io/sazibsust10/symfony-demo:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
