deploy/k8s/ubuntu_sleep.yaml
# sleep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: ubuntu:latest
        command: ["sleep", "3600"]
        imagePullPolicy: IfNotPresent
