deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-service
spec:
  selector:
    app: symfony
  ports:
    - port: 80
      targetPort: 9000
